# Chess

./: .gitignore  CMakeLists.txt  README.md
cmake_helpers/: helpers_c.cmake
include/common/: CommonDefines.h  TimerDefines.h
include/engine/: Engine.h  EngineConfigLoader.h  FramePopulator.h
include/engine/config/: EngineConfig.h
include/game/: Game.h  GameLogic.h
include/game/config/: GameButtonCfg.h  GameCfg.h  GameLogicCfg.h  GamePanelsCfg.h  GameStatePanelCfg.h  LogPanelCfg.h  PieceHandlerCfg.h  PieceHandlerHelperCfg.h  PiecePromotionButtonCfg.h  PiecePromotionPanelCfg.h
include/game/defines/: ChessDefines.h  ChessStructs.h  GameDefines.h  GameLogicDefines.h
include/game/entities/: GameStatePanel.h  Hero.h  LogPanel.h  PiecePromotionPanel.h  Wheel.h
include/game/entities/board/: GameBoard.h  GameBoardAnimator.h  MoveSelector.h
include/game/entities/buttons/: GameButton.h  PiecePromotionButton.h  WheelButton.h
include/game/entities/panels/: GamePanels.h  LogPanel.h  PiecePromotionPanel.h
include/game/entities/pieces/: ChessPieceResolver.h  PieceHandler.h  PieceHandlerHelper.h  PieceHandlerPopulator.h  SavePiecesState.h
include/game/entities/pieces/types/: Bishop.h  ChessPiece.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h  UnfinishedPiece.h
include/game/logic/: GameLogic.h  InputInverter.h
include/game/proxies/: GameBoardProxy.h  GameInterface.h  GameProxy.h  GameStatePanelProxy.h  PiecePromotionPanelProxy.h
include/game/utils/: BoardMoveHelper.h  BoardPos.h  BoardUtils.h  SaveFile.h
manager_utils/: CMakeLists.txt
manager_utils/include/manager_utils/common/: DebugConsole.h
manager_utils/include/manager_utils/drawing/: Image.h  Text.h  Widget.h
manager_utils/include/manager_utils/input/: Button.h
manager_utils/include/manager_utils/managers/: DrawMgr.h  ManagerHandler.h  RsrcMgr.h  TimerMgr.h
manager_utils/include/manager_utils/managers/config/: DrawMgrCfg.h  ManagerHandlerCfg.h  RsrcMgrCfg.h
manager_utils/include/manager_utils/time/: TimerClient.h  TimerData.h
manager_utils/src/common/: DebugConsole.c
manager_utils/src/drawing/: Image.c  Text.c  Widget.c
manager_utils/src/input/: Button.c
manager_utils/src/managers/: DrawMgr.c  ManagerHandler.c  RsrcMgr.c  TimerMgr.c
manager_utils/src/time/: TimerClient.c  TimerData.c
resources/gameFiles/: newGame.txt  newGameLogic.txt
sdl_utils/: CMakeLists.txt
sdl_utils/include/sdl_utils/: InputEvent.h  MonitorWindow.h  Renderer.h  SDLLoader.h  Texture.h
sdl_utils/include/sdl_utils/config/: ImageContainerCfg.h  MonitorWindowCfg.h  TextContainerCfg.h
sdl_utils/include/sdl_utils/containers/: ImageContainer.h  TextContainer.h
sdl_utils/src/: InputEvent.c  MonitorWindow.c  Renderer.c  SDLLoader.c  Texture.c
sdl_utils/src/config/: ImageContainerCfg.c  TextContainerCfg.c
sdl_utils/src/containers/: ImageContainer.c  TextContainer.c
src/: main.c
src/engine/: Engine.c  EngineConfigLoader.c  FramePopulator.c
src/game/: Game.c  GameLogic.c
src/game/entities/: GameStatePanel.c  Hero.c  LogPanel.c  PiecePromotionPanel.c  Wheel.c
src/game/entities/board/: GameBoard.c  GameBoardAnimator.c  MoveSelector.c
src/game/entities/buttons/: GameButton.c  PiecePromotionButton.c  WheelButton.c
src/game/entities/panels/: GamePanels.c  GamePanels.h  GameStatePanel.c  LogPanel.c  PiecePromotionPanel.c
src/game/entities/pieces/: ChessPieceResolver.c  PieceHandler.c  PieceHandlerHelper.c  PieceHandlerPopulator.c  SavePiecesState.c
src/game/entities/pieces/types/: Bishop.c  ChessPiece.c  King.c  Knight.c  Pawn.c  Queen.c  Rook.c  UnfinishedPiece.c
src/game/logic/: GameLogic.c  InputInverter.c
src/game/utils/: BoardMoveHelper.c  BoardPos.c  BoardUtils.c  SaveFile.c
utils/: CMakeLists.txt
utils/include/utils/drawing/: Color.h  DrawParams.h  Point.h  Rectangle.h
utils/include/utils/input/: EventDefines.h
utils/include/utils/path/: PathConfigurator.h
utils/include/utils/thread/: Thread.h
utils/include/utils/time/: Time.h
utils/src/containers/: Vector.c
utils/src/drawing/: Color.c  DrawParams.c  Point.c  Rectangle.c
utils/src/path/: PathConfigurator.c
utils/src/thread/: Thread.c
utils/src/time/: Time.c
